[gd_scene load_steps=7 format=3 uid="uid://dc2j7o1yud5jb"]

[ext_resource type="PackedScene" uid="uid://ch0q4haku44k8" path="res://scenes/head_quarters.tscn" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://3l10w3x0w03r" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://defrigbi7ac0e" path="res://scenes/player.tscn" id="2_h2yge"]
[ext_resource type="Script" uid="uid://dphpdmx8vikda" path="res://scripts/camera_3d.gd" id="2_jyhfs"]

[sub_resource type="BoxMesh" id="BoxMesh_7dm0k"]
size = Vector3(20, 0.2, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ig7tw"]
albedo_color = Color(0.41598, 0.41598, 0.41598, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_h2yge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.832303, 0.554322, 0, -0.554322, 0.832303, 0, 4.33304, 4.26416)
current = true
script = ExtResource("2_jyhfs")

[node name="GroundContainer" type="Node3D" parent="."]

[node name="CSGMesh3D" type="CSGMesh3D" parent="GroundContainer"]
use_collision = true
collision_layer = 4
collision_mask = 0
mesh = SubResource("BoxMesh_7dm0k")
material = SubResource("StandardMaterial3D_ig7tw")

[node name="Buildings" type="Node3D" parent="."]

[node name="HeadQuarters" parent="Buildings" instance=ExtResource("1_0xm2m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.10013, 0.871724, 0)

[node name="Ores" type="Node3D" parent="."]

[node name="Enemies" type="Node3D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_h2yge")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.22922, 1.10491)

[node name="Particles" type="Node3D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 288.0
offset_bottom = 32.0

[node name="OreLabel" type="Label" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Ore: 00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseHPLabel" type="Label" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Base HP: 99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RefineryButton" type="Button" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Refinery (50)"

[node name="TurretButton" type="Button" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Turret (30)"
